--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 <body>
   <div class="home-container">
     <div target-name="page-0" id="p1">
-      <nav>
-        <div class="nav-container">
-          <h1>SAST&nbsp;- </h1>
-        </div>            
-        <ul>
-          <li><a href="">技术</a></li>
-          <li><a href="">办公</a></li>
-          <li><a href="">创新</a></li>
-        </ul>      
+      <nav>  
+        <div class="btn"></div>  
+        <div class="nav">   
+          <ul>
+            <li><strong><a href="">登陆</a></strong></li>
+            <li><strong><a href="">注册</a></strong></li>
+          </ul> 
+          <ul>
+            <li><a href="">技术</a></li>
+            <li><a href="">办公</a></li>
+            <li><a href="">创新</a></li>
+          </ul> 
+        </div>      
       </nav>
+      <div class="nav-container">
+        <h1>SAST&nbsp;- </h1>
+      </div>
       <div class="jumbotron">          
         <div class="jumbotron-title">
-          <p id="jum-title-p1">Students' Association for Science and Technology</p>
-          <p id="jum-title-p2">大学生科学与技术协会</p>          
+          <p id="jum-title-p1">Welcome to Students' Association for Science and Technology</p>
+          <p id="jum-title-p2">大学生科学与技术协会欢迎你</p>          
         </div>
       </div>
       <div class="home-right">
@@ -30,18 +37,14 @@
       </div>
       <div class="clear"></div>
       <div class="home-bottom">
-        <small>@2016-</small>
-        <ul>
-          <li><strong>登陆</strong></li>
-          <li><strong>注册</strong></li>
-        </ul>
+        <small>@ 2016-2016 osyo</small>
       </div>
     </div>
 
     <div target-name="page-1" id="p2">
       <div class="left">
         <h1>SAST - 南邮校科协简介</h1>
-        <p>南京邮电大学大学生科学技术协会（Students’ Association for Science and Technology, 简称SAST，中文简称南邮校科协）。<br />
+        <p>南京邮电大学大学生科学技术协会<br />
           成立于1992年。它是在校党委领导、校团委指导下，依照国家法规和大学生规章制度，独立开展活动的学生科技文化及学术研究的组织。南邮校科协现分为办公中心、技术中心、创新中心三大中心，其中创新中心下还设有CG爱好者协会、ERP协会、苹果爱好者俱乐部等九个直属社团，组织管理有序，机构设置严谨。现为南京邮电大学九大校级学生组织中唯一一个技术类学生组织。</p>
       </div>
       <div class="right">        
@@ -163,7 +166,10 @@
     <div class="section-outfloat hidden" id="section-5-0"></div>
   </div>
   <div class="home-nav"></div>
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<!--   <script src="./dist/js/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
+  <script src="./dist/js/jquery.mobile.custom.min.js"></script>
   <script src="./dist/js/jquery.mousewheel.js"></script>
   <script src="./dist/js/screen.js"></script>
   <script src="./dist/js/main.js"></script>
