--- a/index.html
+++ b/index.html
@@ -12,20 +12,34 @@
       <nav>  
         <div class="btn"></div>  
         <div class="nav">   
-          <ul>
-            <li><strong><a href="">登陆</a></strong></li>
-            <li><strong><a href="">注册</a></strong></li>
+          <ul id="notlogin">
+            <li><strong><a href="javascript:void(0);" onClick="login()">登陆</a></strong></li>
+            <li><strong><a href="javascript:void(0);" onClick="regist()">注册</a></strong></li>
+            <div id="regist">
+              <input type="text" placeholder="学号"><br />
+              <input type="text" placeholder="姓名"><br />
+              <input type="text" placeholder="密码"><br />
+              <input type="text" placeholder="确认密码"><br />
+              <input type="text" placeholder="邮箱"><br />
+              <button onClick="login()">提交</button>
+              <button onClick="rcancel()">取消</button>
+            </div>
           </ul> 
-          <ul>
+          <ul id="login" hidden>
+            <li><img src="./dist/img/p3-3.jpg" alt=""></li>
+            <li><a href="javascript:void(0);" onClick="loginout()">注销</a></li>
+          </ul>
+          <!-- <ul>
             <li><a href="">技术</a></li>
             <li><a href="">办公</a></li>
             <li><a href="">创新</a></li>
-          </ul> 
+          </ul>  -->
         </div>      
       </nav>
       <div class="nav-container">
         <h1>SAST&nbsp;- </h1>
       </div>
+      <div class="clear"></div>
       <div class="jumbotron">          
         <div class="jumbotron-title">
           <p id="jum-title-p1">Welcome to Students' Association for Science and Technology</p>
