--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <input type="text" placeholder="密码"><br />
               <input type="text" placeholder="确认密码"><br />
               <input type="text" placeholder="邮箱"><br />
-              <button onClick="login()">提交</button>
+              <button onClick="login()">提交</button><br/>
               <button onClick="rcancel()">取消</button>
             </div>
           </ul> 
@@ -181,7 +181,7 @@
   </div>
   <div class="home-nav"></div>
   
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="./dist/js/jquery-1.9.1.min.js"></script>
 <!--   <script src="./dist/js/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
   <script src="./dist/js/jquery.mobile.custom.min.js"></script>
   <script src="./dist/js/jquery.mousewheel.js"></script>
